# st-sourdough

./: README.md  main.py  pyproject.toml
.github/: UX-REVIEW-ISSUE.md
sourdough/: __init__.py  calculations.py  ui.py
sourdough/tests/: test_calculations.py  test_ui.py
